<resources>
    <string name="home">Home</string>
    <string name="exam">Exam</string>
    <string name="lists">Lists</string>
    <string name="settings">Settings</string>
    <string name="word_list_empty_dictionary">You don\'t have any words</string>
    <string name="word_list_add_first_word">Add first word</string>
    <string name="word_list_nothing_found">Nothing found</string>
    <string name="word_list_empty_exam_list">You don\'t have saved words in your dictionary, add a few to start exam</string>
    <string name="modify_word_select_translated_language">Select translated language</string>
    <string name="modify_word_word_hint">Word</string>
    <string name="modify_word_input_translate">Enter translation</string>
    <string name="modify_word_description">Description</string>
    <string name="modify_word_transcription">Word transcription</string>
    <string name="modify_word_input_hint">Word hint</string>
    <string name="modify_word_cancel_edit">Cancel edit</string>
    <string name="modify_word_success_save_word">Word saved successfully</string>
    <string name="modify_word_success_delete_word">Word was deleted</string>
    <string name="modify_word_invalid_word_value">Invalid Word</string>
    <string name="modify_word_priority">Priority</string>
    <string name="modify_word_additional">Additional</string>
    <string name="modify_word_microphone">Record pronunciation</string>
    <string name="modify_word_add_new_word">Add new word</string>
    <string name="modify_word_toolbar_title_add">Add new word</string>
    <string name="modify_word_toolbar_title_edit">Edit word</string>
    <string name="modify_word_confirm_delete_title">Are you sure you want to delete this word?</string>
    <string name="modify_word_enable_audio_permission">Your Microphone permission is disabled, you must go to settings and enable one</string>
    <string name="modify_word_enable_audio_go_to_settings">GO TO SETTINGS</string>
    <string name="modify_word_cd_selected_mark">selected mark</string>
    <string name="modify_word_select_lists_dialog_title">Select List</string>
    <string name="modify_word_select_lists_dialog_description">"There isn't lists. Press Add New List for adding one"</string>
    <string name="modify_word_select_lists_dialog_add_list">Add New List</string>
    <string name="modify_word_select_list">Selected List</string>
    <string name="modify_word_add_to_list">Add To List</string>
    <string name="modify_word_dialog_add_new_list_placeholder">Name of the list</string>
    <string name="modify_word_dialog_add_new_list_title">Add new List</string>
    <string name="modify_word_saved_word_success">Word safe successfully</string>
    <string name="modify_word_language_picker_from">from</string>
    <string name="modify_word_language_picker_to">to</string>
    <string name="modify_word_validate_add_empty_field">this field is required, input translate and press add</string>
    <string name="modify_word_record_listen">listen</string>
    <string name="modify_word_unsaved_changes_title">Go back?</string>
    <string name="modify_word_unsaved_changes_message">If you go back you lose unsaved changes</string>
    <string name="modify_word_field_describe_translation">
        You can add multiple translations for a word. Also, if you long press on a translation you will add/remove it from the hidden translations.
        \n\nHidden translations are translations that are marked in dark color and are not visible on the main screen, but they are taken into account during the exam.
        \n\nUseful for languages that have different endings for cases or genders (English "pretty" can be translated into Ukrainian as: "гарний", "гарна", "гарне")
    </string>
    <string name="modify_word_field_describe_priority">
        The priority affects how often you will see the word during the exam, the higher it is - the more often the word appears in the exam. Each time you answer correctly the priority decreases by 1, when you answer incorrectly it increases by 1.
    </string>
    <string name="modify_word_field_describe_lists">
        You can add a word to a special list, for example the Sport list, in which you put all words related to sports
    </string>
    <string name="modify_word_field_describe_hint">
        Hints are special sentences that will help you during the exam if you need them. For example, for the word "Suite", a hint could be "clothes worn by businessmen"
    </string>
    <string name="modify_word_dialog_word_already_exist_title">Word \"%s\" already exist</string>
    <string name="modify_word_dialog_word_already_exist_description">You can replace the old word with current or just see current word</string>
    <string name="modify_word_dialog_word_already_exist_replace">Replace word</string>
    <string name="modify_word_dialog_word_already_exist_go_to_word">To to the word</string>
    <string name="modify_word_select_language_placeholder">select language</string>
    <string name="modify_word_record_delete_cd">Delete this record</string>
    <string name="modify_word_record_cd">Recording button</string>
    <string name="modify_word_add_new_record_cd">Add new record button</string>
    <string name="modify_word_change_record_cd">Change current record button</string>
    <string name="modify_word_field_describe_cd">Icon for showing modal screen with description why this files is needed</string>
    <string name="modify_word_show_next_hint_cd">show next hint</string>
    <string name="modify_word_validation_dictionary_not_selected">dictionary not selected</string>
    <string name="modify_word_validation_dictionary_not_contain_languages">dictionary dose not contain languages</string>
    <string name="exam_counter_toolbar_title_daily_mode">Daily exam</string>
    <string name="exam_counter_toolbar_title_infinity_mode">Infinity exam</string>
    <string name="exam_counter">%1$d from %2$d</string>
    <string name="exam_show_hints">show hints</string>
    <string name="exam_hide_hints">hide hints</string>
    <string name="exam_show_variants">show options</string>
    <string name="exam_hide_variants">hide options</string>
    <string name="exam_your_answer">Your answer: %s</string>
    <string name="exam_correct_answer">Great, your answer is correct :)</string>
    <string name="exam_hidden_translate_description">If you think answer is correct you can add this word like "hidden translate". Hidden translate this is special translates which does not visible on main page list, but taken into account on exam.\n\nHidden translates has different background color. You can change hidden status by long tab on translate</string>
    <string name="exam_show_current_translates">show current translates</string>
    <string name="exam_hide_current_translates">hide current translates</string>
    <string name="exam_alert_select_mode_title">Select exam mode</string>
    <string name="exam_alert_complete_daily_exam_tile">The end</string>
    <string name="exam_alert_complete_daily_exam_description">Congratulations, you complete daily exam</string>
    <string name="exam_complete_infinity_exam">Congratulations, you complete infinity exam</string>
    <string name="exam_list_name">(%s)</string>
    <string name="exam_show_variants_unavailable">Show variants currently is unavailable for this language</string>
    <string name="exam_add_hidden_translate">add hidden translate</string>
    <string name="exam_hidden_translate_description_title">*What is this hidden translate?</string>
    <string name="exam_daily_mode">Daily mode</string>
    <string name="exam_infinity_mode">Infinity mode</string>
    <string name="exam_complete_alert_go_home">Go to home</string>
    <string name="exam_complete_alert_stay_here">I stay here</string>
    <string name="exam_next_word_button_cd">Next word</string>
    <string name="exam_prev_word_button_cd">Previous word</string>
    <string name="exam_select_exam_daily_mode_cd">Select daily exam mode button</string>
    <string name="exam_interrupt">Are you sure you want to interrupt current exam?</string>
    <string name="settings_language_item_title">language</string>
    <string name="settings_language_cd_item_title">go to the language settings</string>
    <string name="settings_exam_reminder_item_title">exam reminder</string>
    <string name="settings_exam_reminder_cd_item_title">go to the exam reminder settings</string>
    <string name="settings_daily_exam_item_title">Daily exam</string>
    <string name="settings_daily_exam_cd_item_title">go to the daily exam settings</string>
    <string name="settings_daily_exam_complaints_and_suggestions">Complaints and suggestions</string>
    <string name="settings_exam_reminder_screen_title">Exam Reminder Settings</string>
    <string name="settings_exam_reminder_label">Exam frequency</string>
    <string name="settings_exam_reminder_left_before_next_reminder">Left time to next exam:</string>
    <string name="settings_exam_reminder_time_push_notification">Select push notification time:</string>
    <string name="settings_exam_reminder_frequency_disable">disable</string>
    <string name="settings_exam_reminder_frequency_once_a_day">once a day</string>
    <string name="settings_exam_reminder_frequency_once_every_2_days">once every 2 days</string>
    <string name="settings_exam_reminder_frequency_once_every_3_days">once every 3 days</string>
    <string name="settings_exam_reminder_frequency_once_every_6_days">once every 6 days</string>
    <string name="exam_reminder_chanel_name">Exam reminder</string>
    <string name="exam_reminder_no_permission_title">No permission for exam reminder</string>
    <string name="exam_reminder_no_permission_request_button">Provide permission</string>
    <string name="exam_reminder_no_permission_permanent_message">Enable push notification permission in the app settings</string>
    <string name="exam_reminder_no_permission_permanent_action">Settings</string>
    <string name="exam_reminder_no_permission_help_dialog_title">Push notification</string>
    <string name="exam_reminder_no_permission_help_dialog_message">The app sends you push notifications when it\'s time to repeat the words. If you do not grant this permission, push notifications will not come</string>
    <string name="exam_reminder_push_chanel_disable_title">Push chanel is disabled, enable one to get ability get reminders</string>
    <string name="exam_reminder_push_chanel_disable_button">Enable chanel</string>
    <string name="settings_languages_title">Languages</string>
    <string name="settings_languages_title_cd_item_title">go to the daily exam settings</string>
    <string name="settings_languages_preferred_languages">Preferred languages</string>
    <string name="app_localization_title">Localization</string>
    <string name="app_localization_search_lang_placeholder">Search language</string>
    <string name="app_localization_search_current_language">Language:&#160;</string>
    <string name="app_localization_change_app_language_dialog_title">Change app language to %s</string>
    <string name="modify_dictionary_dictionary_already_exist_title">Dictionary %s already exist</string>
    <string name="modify_dictionary_dictionary_name_placeholder">Dictionary name</string>
    <string name="modify_dictionary_screen_title_mode_add">Add new dictionary</string>
    <string name="modify_dictionary_screen_title_mode_edit">Edit %s dictionary</string>
    <string name="modify_dictionary_validation_title_empty">Title must be not empty</string>
    <string name="modify_dictionary_validation_lang_from_empty">Language from must be not empty</string>
    <string name="add">Add</string>
    <string name="yes">Yes</string>
    <string name="ok">Ok</string>
    <string name="no">No</string>
    <string name="check_answer">check answer</string>
    <string name="word_translate">word translate</string>
</resources>