<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/cancel_edit_translate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modify_word_cancel_edit"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/english_word_container"
            app:layout_constraintEnd_toEndOf="@+id/english_word_container"
            tools:visibility="visible" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/english_word_container"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/gutter"
            android:layout_marginRight="@dimen/gutter"
            android:hint="@string/modify_word_input_translate"
            app:errorEnabled="true"
            app:layout_constraintEnd_toStartOf="@+id/button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearance="?attr/shapeAppearanceSmallComponent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/translate_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="@integer/input_max_lines"
                android:nextFocusDown="@id/description_input"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginBottom="16.5dp"
            android:text="@string/add"
            app:layout_constraintBottom_toBottomOf="@+id/english_word_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/english_word_container" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/translate_chips_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:overScrollMode="never"
            app:layoutManager="com.google.android.flexbox.FlexboxLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/english_word_container"
            tools:listitem="@layout/item_translate_chip" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>